--- a/.github/workflows/update_tap.yaml
+++ b/.github/workflows/update_tap.yaml
@@ -18,6 +18,7 @@ jobs:
   update-tap:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Update formula
         shell: bash
         run: |
