--- a/.github/workflows/update_tap.yaml
+++ b/.github/workflows/update_tap.yaml
@@ -38,10 +38,10 @@ jobs:
           delete-branch: true
           title: "feat: bump up to ${{ github.event.client_payload.version }}"
           
-      #- name: Enable Pull Request Automerge
-      #  if: steps.cpr.outputs.pull-request-operation == 'created'
-      #  uses: peter-evans/enable-pull-request-automerge@v2
-      #  with:
-      #    token: ${{ secrets.PAT_FLUTTERGEN }}
-      #    pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
-      #    merge-method: squash
+      - name: Enable Pull Request Automerge
+        if: steps.cpr.outputs.pull-request-operation == 'created'
+        uses: peter-evans/enable-pull-request-automerge@v2
+        with:
+          token: ${{ secrets.PAT_FLUTTERGEN }}
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+          merge-method: squash
