--- a/.github/workflows/update_tap.yaml
+++ b/.github/workflows/update_tap.yaml
@@ -14,6 +14,10 @@ on:
         required: true
         default: ''
 
+permissions:
+  pull-requests: write
+  contents: write
+
 jobs:
   update-tap:
     runs-on: ubuntu-latest
