--- a/.github/workflows/update_tap.yaml
+++ b/.github/workflows/update_tap.yaml
@@ -32,11 +32,20 @@ jobs:
           -e 's/{{ sha256_macos }}/${{ github.event.client_payload.sha256_macos }}/g' \
           fluttergen_template.rb > Formula/fluttergen.rb
 
+      # GitHub Apps でトークンを取得する
+      - name: Generate github apps token
+        id: app-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.FLUTTEGEN_APP_ID }}
+          private-key: ${{ secrets.FLUTTEGEN_APP_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
+
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.PAT_FLUTTERGEN }}
+          token: ${{ steps.app-token.outputs.token }}
           commit-message: "feat: bump up to ${{ github.event.client_payload.version }}"
           branch: update-tap
           delete-branch: true
@@ -46,6 +55,6 @@ jobs:
         if: steps.cpr.outputs.pull-request-operation == 'created'
         uses: peter-evans/enable-pull-request-automerge@v2
         with:
-          token: ${{ secrets.PAT_FLUTTERGEN }}
+          token: ${{ steps.app-token.outputs.token }}
           pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
           merge-method: squash
